--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.23.5",
     "@babel/preset-env": "7.23.5",
     "@shopify/stylelint-plugin": "13.0.0",
+    "@squoosh/lib": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "babel-loader": "9.1.3",
@@ -29,6 +30,8 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "5.5.4",
     "mini-css-extract-plugin": "2.7.6",
     "stylelint": "15.11.0",
@@ -40,8 +43,5 @@
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.10.0"
-  },
-  "dependencies": {
-    "slider-pro-js": "^1.0.1"
   }
 }
